2010-03-07  Karl Berry  <karl@gnu.org>

	* tex4ht-docbook.tex: license notices.
	* Makefile: add derivations.

2010-03-06  Karl Berry  <karl@gnu.org>

	* tex4ht-env.tex: license notices.
	(dvips convert (personal)): do not hardcode path to convert
	(else zztex4ht-env.ps is left behind).
	* Makefile: add derivations.

2010-03-05  Karl Berry  <karl@gnu.org>

	* tex4ht-fonts-noncjk.tex: start at license notices.
	Correct quoting of the
	\Needs{"xhlatex tex4ht-fonts-4hf ..."} line.
	* Makefile: start at derivations.

2010-03-04  Radhakrishnan CV  <cvr@river-valley.org>

	* tex4ht-mkht.tex (<MYcopyrightnotice): new macro; insert
	notice in all generated scripts.

2010-03-04  Karl Berry  <karl@gnu.org>

	* tex4ht-htcmd.tex: update license notices.
	* Makefile: add derivations.

2010-03-03  Karl Berry  <karl@gnu.org>

	* tex4ht-html-speech-xtpipes.tex: update license notices.
	* Makefile: add derivations.

2010-03-02  Karl Berry  <karl@gnu.org>

	* tex4ht-html-speech.tex,
	* tex4ht-html0.tex: update license notices.
	* Makefile: add derivations.

2010-02-28  Karl Berry  <karl@gnu.org>

	* tex4ht-html32.tex,
	* tex4ht-html4.tex: update license notices.
	* Makefile: add derivations.

2010-02-26  Karl Berry  <karl@gnu.org>

	* tex4ht-info-mml.tex,
	* tex4ht-info-ooffice.tex: update license notices.
	* Makefile: add derivations.

2010-02-25  Karl Berry  <karl@gnu.org>

	* tex4ht-info-svg.tex,
	* tex4ht-javahelp-xtpipes.tex: update license notices.
	* Makefile: add derivations.

2010-02-23  Karl Berry  <karl@gnu.org>

	* tex4ht-javahelp.tex,
	* tex4ht-jsmath.tex: update license notices.
	* Makefile: add derivations.

2010-02-22  Karl Berry  <karl@gnu.org>

	* tex4ht-jsml-xtpipes.tex,
	* tex4ht-jsml.tex: update license notices.
	* Makefile: add derivations.

2010-02-21  Karl Berry  <karl@gnu.org>

	* tex4ht-mathltx.tex: update license notices.
	* Makefile: add derivations.

2010-02-18  Karl Berry  <karl@gnu.org>

	* tex4ht-mathplayer.tex: update license notices.